--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -1,3 +1,7 @@
-<h1>{{ post.subject }}</h1>
-
-<body>{{ post.content }}</body>
+{% extends "blog\base.html" %}
+{% block title %}George's Blog-{{ post.subject }}{% endblock title %}
+{% block content %}
+	<h1>{{ post.subject }}</h1>
+	<h4>Published at {{ post.pub_date}}</h4>
+	<p>{{ post.content }}</p>
+{% endblock content %}
