--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,13 +7,18 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+	
+	<!-- Blog CSS -->
+	{% load static %}
+	<link rel="stylesheet" type="text/css" href="{%static 'blog/style.css' %}">
+	
     <title>{% block title %}George's Blog{% endblock title %}</title>
   </head>
   <body>
-
 	<div class="container">
-		{% block content %}{% endblock content %}
+		<div class="col">
+			{% block content %}{% endblock content %}
+		</div>
 	</div>
 
     <!-- Optional JavaScript -->
